--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="images/istockphoto-1303724228-612x612.jpg" alt="Beauty of nature">
         </div>
         </div>
-        <div class="flex flex2"><h2>Beauty of Nature</h2>
+        <div class="flex flex2"><h2>Vision</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur praesentium dolorem molestiae ad ipsam beatae dolore officiis atque consequatur.</p>
             <p class="text">
                 <a href="#" class="btn">Learn More</a>
@@ -64,7 +64,7 @@
                 <img src="images/istockphoto-1334949821-612x612.jpg">
             </div>
             </div>
-            <div class="flex flex2"><h2>Beauty of Nature</h2>
+            <div class="flex flex2"><h2>Mission</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur praesentium dolorem molestiae ad ipsam beatae dolore officiis atque consequatur.</p>
                 <p class="text">
                     <a href="#" class="btn">Learn More</a>
@@ -79,8 +79,16 @@
             <img src="images/istockphoto-2157387196-612x612.jpg">
         </div>
         </div>
-        <div class="flex flex2"><h2>Beauty of Nature</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur praesentium dolorem molestiae ad ipsam beatae dolore officiis atque consequatur.</p>
+        <div class="flex flex2"><h2>Why choose us</h2>
+            <ol>
+                <li>
+                    <h2>Tailored Solutions</h2>
+                    <ul>
+                        <p>Bespoke software development: We don’t offer one-size-fits-all solutions. At Naptile Technologies, we take the time to understand your business challenges and provide custom solutions that fit your unique needs.</p>
+                        <p>Flexible and scalable solutions: Whether you’re a startup or a large enterprise, our solutions scale with your business, adapting to your changing needs.</p>
+                    </ul>
+                </li>
+            </ol>   
             <p class="text">
                 <a href="#" class="btn">Learn More</a>
             </p>
