--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         </div>
         <div class="flex flex2"><h2>Vision</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur praesentium dolorem molestiae ad ipsam beatae dolore officiis atque consequatur.</p>
+            <p>"At Naptile Technologies, our vision is to empower businesses worldwide with innovative, reliable, and customized software solutions that drive growth, enhance efficiency, and create meaningful digital experiences. We aim to be a trusted partner for businesses of all sizes, offering cutting-edge technology and expert support that enable our clients to thrive in an ever-evolving digital landscape. Through collaboration, innovation, and a commitment to excellence, we aspire to shape the future of technology, one solution at a time."</p>
             <p class="text">
                 <a href="#" class="btn">Learn More</a>
             </p>
