--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
             <img src="images/istockphoto-1421272542-612x612.jpg">
         </div>
         </div>
-        <div class="flex flex2"><h2>Beauty of Nature</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur praesentium dolorem molestiae ad ipsam beatae dolore officiis atque consequatur.</p>
+        <div class="flex flex2"><h2>Our Services</h2>
+            <ul>
+                <li>Custom Software Development</li>
+                <li>Software Consulting</li>
+                <li>System Integration</li>
+            </ul>
             <p class="text">
                 <a href="#" class="btn">Learn More</a>
             </p>
