--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
                 <img src="images/istockphoto-1334949821-612x612.jpg">
             </div>
             </div>
-            <div class="flex flex2"><h2>Mission</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis pariatur praesentium dolorem molestiae ad ipsam beatae dolore officiis atque consequatur.</p>
+            <div class="flex flex2"><h2>Our Approach</h2>
+               <p> At Naptile Technologies, we take a thoughtful and collaborative approach to solving your software challenges. We believe that every project is unique and deserves a tailored strategy. Our process is designed to ensure that we deliver results that not only meet your requirements but exceed your expectations.
+
+Here’s how we work:</p>
                 <p class="text">
                     <a href="#" class="btn">Learn More</a>
                 </p>
