--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
  </main>
  <aside class="flex flex1">
     <h2>side bar</h2>
+     <i class="fa fa-whatsapp" style="font-size:48px;color:red"></i>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ad consequatur pariatur porro, et eos recusandae consectetur inventore unde optio.</p>
  <a href="mailto:naptiletechnologies@gmail.com">Email Me</a>
 </aside> 
