--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
  </main>
  <aside class="flex flex1">
-    <h2>side bar</h2>
-     <i class="fa fa-whatsapp" style="font-size:48px;color:red"></i>
+    <h2>Additional information</h2>
+     <i class="fa fa-whatsapp" style="font-size:48px;color:red"> +254 755318914</i>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ad consequatur pariatur porro, et eos recusandae consectetur inventore unde optio.</p>
  <a href="mailto:naptiletechnologies@gmail.com">Email Me</a>
 </aside> 
