--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
  </main>
  <aside class="flex flex1">
     <h2>Additional information</h2>
-     <i class="fa fa-whatsapp" style="font-size:48px;color:red"> +254 755318914</i>
+ <i class="fa fa-whatsapp" style="font-size:24px"> +254 755318914</i>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ad consequatur pariatur porro, et eos recusandae consectetur inventore unde optio.</p>
  <a href="mailto:naptiletechnologies@gmail.com">Email Me</a>
 </aside> 
