--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 Here’s how we work: </p>
                 <p class="text">
-                    <a href="#" class="btn">Learn More</a>
+                    <a href="approach.html" class="btn">Learn More</a>
                 </p>
                    </div>
         </div>
@@ -93,7 +93,7 @@
                 </li>
             </ol>   
             <p class="text">
-                <a href="#" class="btn">Learn More</a>
+                <a href="whychoose.html" class="btn">Learn More</a>
             </p>
                </div>
     </div>
