--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
  </main>
  <aside class="flex flex1">
     <h2>More Info</h2>
+     <a href= "#" ><i class="fa fa-question-circle" style="font-size:36px"></i>FAQS</a>
 </aside> 
 </div>
 </div>
