--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
  <aside class="flex flex1">
     <h2>Additional information</h2>
  <i class="fa fa-whatsapp" style="font-size:24px"> +254 755318914</i>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ad consequatur pariatur porro, et eos recusandae consectetur inventore unde optio.</p>
+ <i class="fa fa-facebook-square" style="font-size:36px">Naptile Technologies</i>
  <a href="mailto:naptiletechnologies@gmail.com">Email Me</a>
+     
 </aside> 
 </div>
 </div>
