--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
  <i class="fa fa-whatsapp" style="font-size:24px"> +254 755318914</i>
  <i class="fa fa-facebook-square" style="font-size:24px">Naptile Technologies</i>
  <p>&Xopf;</p>
- <a href="mailto:naptiletechnologies@gmail.com">Email Me</a>
+ <a href="mailto:naptiletechnologies@gmail.com">Email Us</a>
      
 </aside> 
 </div>
