--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <h2>Additional information</h2>
  <i class="fa fa-whatsapp" style="font-size:24px"> +254 755318914</i>
  <i class="fa fa-facebook-square" style="font-size:24px">Naptile Technologies</i>
- <p>&Xopf;</p>
+ <p>"&Xopf;" style="font-size:28px"</p>
  <a href="mailto:naptiletechnologies@gmail.com">Email Us</a>
      
 </aside> 
