--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <li>System Integration</li>
             </ul>
             <p class="text">
-                <a href="#" class="btn">Learn More</a>
+                <a href="ourservices.html" class="btn">Learn More</a>
             </p>
                </div>
     </div>
