--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
  </main>
  <aside class="flex flex1">
-    <h2>Additional information</h2>
+    <h2>Contact Us</h2>
  <i class="fa fa-whatsapp" style="font-size:24px"> +254 755318914</i>
  <i class="fa fa-facebook-square" style="font-size:20px">Naptile Technologies</i>
  <p>&Xopf;</p>
