--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
  <aside class="flex flex1">
     <h2>Contact Us</h2>
  <i class="fa fa-whatsapp" style="font-size:24px"> +254 755318914</i>
+     <i class="fa fa-whatsapp" style="font-size:24px"> +254 707789021</i>
  <i class="fa fa-facebook-square" style="font-size:20px">Naptile Technologies</i>
  <p>&Xopf;</p>
  <a href="mailto:naptiletechnologies@gmail.com">Email Us</a>
