--- a/whychoose.html
+++ b/whychoose.html
@@ -91,8 +91,8 @@
        
      </main>
      <aside class="flex flex1">
-        <h2>side bar</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat distinctio laborum quia fugit rerum, eligendi repudiandae at quam expedita perspiciatis nobis vero cupiditate molestiae? Eveniet illo tenetur hic magnam reiciendis dolor consequuntur animi consequatur maiores exercitationem incidunt doloremque deleniti tempore, aperiam molestiae. Non quam natus quod minima quibusdam, facere omnis.</p>
+        <h2>Other Info</h2>
+    <p></p>
      </aside> 
     </div>
     </div>
