--- a/ourservices.html
+++ b/ourservices.html
@@ -108,10 +108,10 @@
                 <div class="flex flex1">
                 
                     
-                    <h2>privacy Protection</h2>
+                    <h2>Menu</h2>
                     <ul>
                         <li> 
-                            <a href="ourservices.html">Services</a>
+                            <a href="#">privacy Protection</a>
                         </li>
                         <li>
                            <a  href="#">Terms and condition</a>
