--- a/contact.html
+++ b/contact.html
@@ -115,16 +115,16 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="#"></a>
+                        <a href="">Leave a comment</a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="#">Live Chart</a>
                         </li>
                     <li> 
-                        <a href="#"></a>
+                        <a href="#">Help</a>
                     </li>
                     <li>
-                        <a href="#">/a>
+                        <a href="#">Customer care</a>
                     </li>
                 </ul>
             
