--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                         <a href="">Leave a comment</a>
                     </li>
                     <li>
-                        <a href="#">Live Chart</a>
+                        <a href="#">Live Chat</a>
                         </li>
                     <li> 
                         <a href="#">Help</a>
