--- a/gallery.html
+++ b/gallery.html
@@ -87,16 +87,16 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="#"></a>
+                        <a href="Home"></a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="Contact Us"></a>
                         </li>
                     <li> 
-                        <a href="#"></a>
+                        <a href="Login"></a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="Services"></a>
                     </li>
                 </ul>
             
@@ -108,16 +108,16 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="#"></a>
+                        <a href="Comment"></a>
                     </li>
                     <li>
-                       <a  href="#"></a>
+                       <a  href="Sign Up"></a>
                         </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="Login"></a>
                         </li>
                     <li>
-                        <a href="#"> </a>
+                        <a href="FAQS"> </a>
                     </li>
                 </ul>
             
