--- a/gallery.html
+++ b/gallery.html
@@ -87,16 +87,16 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="Home"></a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="Contact Us"></a>
+                        <a href="Contact.html">Contact Us</a>
                         </li>
                     <li> 
-                        <a href="Login"></a>
+                        <a href="#">Login</a>
                     </li>
                     <li>
-                        <a href="Services"></a>
+                        <a href="#">Services</a>
                     </li>
                 </ul>
             
@@ -108,16 +108,16 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="Comment"></a>
+                        <a href="#">Comment</a>
                     </li>
                     <li>
-                       <a  href="Sign Up"></a>
+                       <a  href="#">Sign Up</a>
                         </li>
                     <li>
-                        <a href="Login"></a>
+                        <a href="#">Login</a>
                         </li>
                     <li>
-                        <a href="FAQS"> </a>
+                        <a href="#"> FAQS</a>
                     </li>
                 </ul>
             
