--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="description" content=""Naptile Technologies is a leading provider of innovative technology solutions, specializing in software development, IT consulting, and digital transformation services. Our mission is to empower businesses with cutting-edge technology that enhances productivity, drives growth, and transforms operations. With a team of experienced professionals, we deliver scalable and customized solutions tailored to meet the unique needs of our clients across various industries. Whether it's developing bespoke applications, optimizing systems, or integrating modern solutions, Naptile Technologies helps businesses stay ahead in an ever-evolving digital world."">
+    <!-- Schema Markup (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Naptile Technologies",
+    "url": "https://naptile.github.io/Naptiletechnologies-website",
+    "logo": "https://www.naptiletechnologies.com/logo.png",
+    "sameAs": [
+      "https://www.facebook.com/NaptileTech",
+      "https://twitter.com/NaptileTech",
+      "https://www.linkedin.com/company/naptile-technologies"
+    ],
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+254 707789021",
+      "contactType": "Customer Service",
+      "areaServed": "Globally",
+      "availableLanguage": "English"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Nairobi",
+      "addressLocality": "Nairobi",
+      "addressRegion": "Eastern",
+      "postalCode": "90133",
+      "addressCountry": "Kenya"
+    }
+  }
+  </script>
     <title>Home</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="icon" type="image/x-icon" href="">
