--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
   }
   </script>
-    <title>Home</title>
+    <title>Naptile Technologies – IT Solutions and Custom Software Development</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
