--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="description" content=""Naptile Technologies is a leading provider of innovative technology solutions, specializing in software development, IT consulting, and digital transformation services. Our mission is to empower businesses with cutting-edge technology that enhances productivity, drives growth, and transforms operations. With a team of experienced professionals, we deliver scalable and customized solutions tailored to meet the unique needs of our clients across various industries. Whether it's developing bespoke applications, optimizing systems, or integrating modern solutions, Naptile Technologies helps businesses stay ahead in an ever-evolving digital world."">
+    <meta name="keywords" content="Naptile, Naptile Technologies, software, IT, tech company, Kenya tech, digital services">
     <meta name="google-site-verification" content="GhvJKPeCLKpexzadxJkOiY4GL0xMhuyUFRlCA2ldtqQ" />
     <!-- Schema Markup (JSON-LD) -->
   <script type="application/ld+json">
