--- a/index.html
+++ b/index.html
@@ -20,40 +20,31 @@
     <meta name="description" content=""Naptile Technologies is a leading provider of innovative technology solutions, specializing in software development, IT consulting, and digital transformation services. Our mission is to empower businesses with cutting-edge technology that enhances productivity, drives growth, and transforms operations. With a team of experienced professionals, we deliver scalable and customized solutions tailored to meet the unique needs of our clients across various industries. Whether it's developing bespoke applications, optimizing systems, or integrating modern solutions, Naptile Technologies helps businesses stay ahead in an ever-evolving digital world."">
     <meta name="keywords" content="Naptile, Naptile Technologies, software, IT, tech company, Kenya tech, digital services">
     <meta name="google-site-verification" content="GhvJKPeCLKpexzadxJkOiY4GL0xMhuyUFRlCA2ldtqQ" />
-    <!-- Schema Markup (JSON-LD) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Naptile Technologies",
-    "url": "https://naptile.github.io/Naptiletechnologies-website",
-    "logo": "https://www.naptiletechnologies.com/logo.png",
-    "sameAs": [
-      "https://www.facebook.com/NaptileTech",
-      "https://twitter.com/NaptileTech",
-      "https://www.linkedin.com/company/naptile-technologies"
-    ],
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+254 707789021",
-      "contactType": "Customer Service",
-      "areaServed": "Globally",
-      "availableLanguage": "English"
-    },
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Nairobi",
-      "addressLocality": "Nairobi",
-      "addressRegion": "Eastern",
-      "postalCode": "90133",
-      "addressCountry": "Kenya"
-    }
-  }
-  </script>
     <title>Naptile Technologies – IT Solutions and Custom Software Development</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Naptile Technologies",
+  "url": "https://naptile.github.io/Naptiletechnologies-website",
+  "logo": "https://naptile.github.io/Naptiletechnologies-website/images/logo.png",
+  "description": "Naptile Technologies offers IT solutions, software development, and digital transformation services in Kenya.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Nairobi",
+    "addressCountry": "KE"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+254700000000",
+    "contactType": "Customer Service"
+  }
+}
+</script>
+
 </head>
 <body>
     
