--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   "logo": "https://naptile.github.io/Naptiletechnologies-website/images/logo.png",
   "description": "Naptile Technologies offers IT solutions, software development, and digital transformation services in Kenya.",
   "address": {
-    "@type": "PostalAddress",
+    "@type": "PostalAddress",          
     "addressLocality": "Nairobi",
     "addressCountry": "KE"
   },
   "contactPoint": {
     "@type": "ContactPoint",
-    "telephone": "+254700000000",
+    "telephone": "+254 707789021",
     "contactType": "Customer Service"
   }
 }
