--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 
   gtag('config', 'G-JYGSH063HN');
 </script>
+    
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "What services does Naptile Technologies provide?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Naptile Technologies offers software development, IT consulting, and digital transformation services."
+    }
+  }]
+}
+</script>
 
 
     <meta charset="UTF-8">
