--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </div>
     <div class="wrapper">
     <section class="copyright">
-        &copy; 2025 Naptile, All rights reserved
+        &copy; 2025 Naptile Technologies-Founded by Naptile. M . Peter, All rights reserved
     </section>
 </div>
    
