--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
   }]
 }
 </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Naptile M. Peter",
+  "jobTitle": "Founder & CEO",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Naptile Technologies",
+    "url": "https://naptile.github.io/Naptiletechnologies-website"
+  },
+  
+}
+</script>
+
 
 
     <meta charset="UTF-8">
