--- a/index.html
+++ b/index.html
@@ -243,8 +243,9 @@
         </div>
     </div>
     <div class="wrapper">
+        <p>Founded by Naptile. M . Peter</p>
     <section class="copyright">
-        &copy; 2025 Naptile Technologies-Founded by Naptile. M . Peter, All rights reserved
+        &copy; 2025 Naptile, All rights reserved
     </section>
 </div>
    
