--- a/me.html
+++ b/me.html
@@ -67,16 +67,16 @@
 <body>
 
   <header>
-    <h1>Naptile .M. Peter</h1>
+    <h1>Naptile M Peter</h1>
     <p>Founder & CEO, Naptile Technologies</p>
-    <a href="#contact" class="cta">Get in Touch</a>
+    <a href="form.html" class="cta">Get in Touch</a>
   </header>
 
   <nav>
-    <a href="#about">About</a>
-    <a href="#company">Company</a>
+    <a href="naptile.html">About</a>
+    <a href="https://naptile.github.io/Naptiletechnologies-website/index.html">Company</a>
     <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
   <section id="about">
