--- a/naptile.html
+++ b/naptile.html
@@ -136,7 +136,7 @@
 <body>
 
   <header class="hero">
-    <img src="mypic2.jpg" alt="Naptile should Peter">
+    <img src="mypic2.jpg" alt="Naptile  Peter">
     <h1>Naptile M Peter</h1>
     <h2>Founder & CEO – Naptile Technologies</h2>
     <p>A visionary entrepreneur building smart digital tools for the modern business world.</p>
