--- a/naptile.html
+++ b/naptile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Naptile M. Peter – Founder of Naptile Technologies</title>
   <meta name="description" content="Meet Naptile M. Peter, founder of Naptile Technologies. Discover his journey, vision, and how he’s empowering businesses through innovative digital solutions.">
-  <link rel="stylesheet" href="gallery.html">
+  <link rel="stylesheet" href="images.html">
 
   <style>
     * {
