--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
  <i class="fa fa-facebook-square" style="font-size:20px">Naptile Technologies</i>
  <p>&Xopf;</p>
  <a href="mailto:naptiletechnologies@gmail.com">Email Us</a>
- <p><a href="https://naptile.github.io/Naptile-Peter-profile/">Learn More about CEO @Naptile Technologies</a></p>  
+ <p><a href="https://naptile.github.io/Naptile-Peter-profile/">Learn More about the CEO @Naptile Technologies</a></p>  
      
 </aside> 
 </div>
