--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                        <a  href="about.html">About</a>
