--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="ouservices.html">Services</a>
+                        <a href="ourservices.html">Services</a>
                     </li>
                 </ul>
             
