--- a/ourservices.html
+++ b/ourservices.html
@@ -101,10 +101,10 @@
                     <h2>Menu</h2>
                     <ul>
                         <li> 
-                            <a href="#">About</a>
+                            <a href="About.html">About</a>
                         </li>
                         <li>
-                            <a href="#">contact</a>
+                            <a href="contact.html">contact</a>
                             </li>
                         <li> 
                             <a href="#">Client Testmonials</a>
