--- a/ourservices.html
+++ b/ourservices.html
@@ -101,7 +101,7 @@
                     <h2>Menu</h2>
                     <ul>
                         <li> 
-                            <a href="About.html">About</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
                             <a href="contact.html">contact</a>
