--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         </li>
        <input type="text" id="searchInput" class="search" placeholder="Search">
 
-    
+    <p id="noResults" style="display:none;">No results found.</p>
+
        </ul>
     </nav>
 </div>
