--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 
                 
 </div>
-
+</article>
+     <article>
         <div class="flex flex2"><h2>Vision</h2>
             <p>At Naptile Technologies, our vision is to empower businesses worldwide with innovative, reliable, and customized software solutions that drive growth, enhance efficiency, and create meaningful digital experiences. We aim to be a trusted partner for businesses of all sizes, offering cutting-edge technology and expert support that enable our clients to thrive in an ever-evolving digital landscape. Through collaboration, innovation, and a commitment to excellence, we aspire to shape the future of technology, one solution at a time.</p>
             <p class="text">
