--- a/form.html
+++ b/form.html
@@ -31,10 +31,14 @@
     <label for="message">Message:</label><br>
     <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
 
-    <input type="submit" value="Send" onclick = '
-        alert('Thank You! /n Form submitted successfully' >
+    <input type="submit" value="Send" onclick = "submit();"
+        
     <input type="reset" value="Reset">
 </form>
-
+<script>
+    function submit(){
+        alert('Thank You! /n Form submitted successfully')
+    }
+</script>
 </body>
 </html>
