--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
     <label for="message">Message:</label><br>
     <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
 
-    <input type="submit" value="Send" onclick = "submit();"
+    <input type="submit" value="Send" onclick = "submit();">
         
     <input type="reset" value="Reset">
 </form>
