--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
 </form>
 <script>
     function submit(){
-        alert('Thank You! /n Form submitted successfully')
+        alert('Thank You! /n Form submitted successfully');
     }
 </script>
 </body>
