--- a/form.html
+++ b/form.html
@@ -43,7 +43,7 @@
       <!-- Prevent bot spam -->
       <input type="hidden" name="_captcha" value="false">
       <!-- Redirect to thank you page -->
-      <input type="hidden" name="_next" value="Thnkyou for your feedback">
+      <input type="hidden" name="_next" value="https://naptile.github.io/Naptiletechnologies-website/index.html">
       <button type="submit">Send</button>
     </form>
   </div>
