--- a/form.html
+++ b/form.html
@@ -44,7 +44,8 @@
       <input type="hidden" name="_captcha" value="false">
       <!-- Redirect to thank you page -->
       <input type="hidden" name="_next" value="https://naptile.github.io/Naptiletechnologies-website/index.html">
-      <button type="submit">Send</button>
+      <button type="submit" onclick = "
+          alert('Thank you, Form submitted successfully!');">Send</button>
     </form>
   </div>
 </body>
