--- a/form.html
+++ b/form.html
@@ -11,6 +11,11 @@
 
   gtag('config', 'G-JYGSH063HN');
 </script>
+    <script>
+        function submitted(){
+            alert('Thank you, Form submitted successfully!');
+        }
+    </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,9 +49,7 @@
       <input type="hidden" name="_captcha" value="false">
       <!-- Redirect to thank you page -->
       <input type="hidden" name="_next" value="https://naptile.github.io/Naptiletechnologies-website/index.html">
-      <button    onclick = "
-          alert('Thank you, Form submitted successfully!');"
-          type="submit">Send</button>
+      <button    onclick = "submitted ();"type="submit">Send</button>
     </form>
   </div>
 </body>
