--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
       <!-- Prevent bot spam -->
       <input type="hidden" name="_captcha" value="false">
       <!-- Redirect to thank you page -->
-      <input type="hidden" name="_next" value="https://naptile.github.io/Naptiletechnologies-website/index.html">
+      <input type="hidden" name="_next" value="submitted();">
       <button onclick = "submitted();" type="submit">Send</button>
     </form>
   </div>
