--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="form-container">
-    <form action="https://formsubmit.co/naptiletechnologies@gmail.com" method="POST" id="contact-form">
+    <form  method="POST" action="https://formsubmit.co/naptiletechnologies@gmail.com"  id="contact-form">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
