--- a/contact.html
+++ b/contact.html
@@ -165,5 +165,6 @@
     
 
    <script src="jss/master.js" ></script>
+    <script src="//code.tidio.co/3wpsm4npx9yqhzizc5us8ithhwptg0jf.js" async></script>
 </body>
 </html>
