--- a/form.html
+++ b/form.html
@@ -52,6 +52,7 @@
       <button type="submit">Send</button>
     </form>
   </div>
+    <script src="//code.tidio.co/3wpsm4npx9yqhzizc5us8ithhwptg0jf.js" async></script>
 </body>
 </html>
 
