--- a/thankyou2.html
+++ b/thankyou2.html
@@ -72,7 +72,7 @@
 <body>
   <div class="thank-you-container" id="thankYouBox">
     <!-- Replace logo URL with your own image -->
-    <img src="logo12.png" alt="Logo" class="logo">
+    <img src="logos/logo12.png" alt="Logo" class="logo">
     <h1>Thank You!</h1>
     <p>Your message has been sent successfully.</p>
     <a href="index.html" class="btn">Back to Home</a>
