--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
               <a href="gallery.html">Gallery</a>
           </li>
           <li>
-              <a href="contact.html">Contact</a>
+              <a href="form.html">Contact</a>
           </li>
        
        <input type="text" class="search" placeholder="search">
@@ -85,7 +85,7 @@
                 <h2>Menu</h2>
                 <ul>
                     <li> 
-                        <a href="contact.html">Contact</a>
+                        <a href="form.html">Contact</a>
                     </li>
                     <li>
                         <a href="gallery.html">Gallery</a>
