--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
  <main class="flex flex3">
 
 <h2>Contact Us</h2>
-<form  action="">
+<form  method = "POST" action="https://formsubmit.co/naptiletechnologies@gmail.com">
     <div class="flexbox">
         <div class="flex flex1">
             <div class="block">
