--- a/form.html
+++ b/form.html
@@ -42,6 +42,7 @@
 <body>
   <div class="form-container">
     <form  method = "POST" action="https://formsubmit.co/naptiletechnologies@gmail.com"  id="contact-form">
+         <h1>Contact Us</h1>
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
