--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 <body>
     
  <header>
-    <div class="wrapper">
+    <div class="wrapper" style ="background:images/istockphoto-2157387196-612x612.jpg;">
     <nav>
        <div class="logo"></div>
        <div id="toggle">&#8801;</div>
