--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
   }
 }
 </script>
+    <img src="images/naptile_tec_logo.png" alt="Naptile Technologies Logo" style="height: 80px;">
+
 
 </head>
 <body>
