--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <meta property="og:type" content="website">
 
     <title>Naptile Technologies – IT Solutions and Custom Software Development</title>
+     <img src="images/naptile_tech_logo.png" alt="Naptile Technologies Logo" style="height: 80px;">
+
+
     <link rel="stylesheet" href="css/master.css">
     <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -80,9 +83,7 @@
   }
 }
 </script>
-    <img src="images/naptile_tec_logo.png" alt="Naptile Technologies Logo" style="height: 80px;">
-
-
+   
 </head>
 <body>
     
