--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <meta property="og:type" content="website">
 
     <title>Naptile Technologies – IT Solutions and Custom Software Development</title>
-     <img src="images/naptile_tech_logo.png" alt="Naptile Technologies Logo" style="height: 80px;">
+    
 
 
     <link rel="stylesheet" href="css/master.css">
@@ -90,7 +90,9 @@
  <header>
     <div class="wrapper">
     <nav>
-       <div class="logo"></div>
+       <div class="logo">
+            <img src="images/naptile_tech_logo.png" alt="Naptile Technologies Logo" style="height: 80px;">
+       </div>
        <div id="toggle">&#8801;</div>
        <ul id="menu">
         <li>
